[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cults3d-mcp"
version = "0.1.0"
description = "MCP server for Cults3D — upload designs, track stats, manage listings"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["mcp", "cults3d", "3d-printing", "ai", "model-context-protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "anyio>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.4.0",
]

[project.scripts]
cults3d-mcp = "cults3d_mcp.server:main"

[project.urls]
Homepage = "https://github.com/clugtu/cults3d-mcp"
Repository = "https://github.com/clugtu/cults3d-mcp"
Issues = "https://github.com/clugtu/cults3d-mcp/issues"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
